# squadmanager

./: .gitignore  CDC.md  CDC.md.bak  CDC_TEST.md  CHANGELOG.md  DEVBOOK.md  LICENSE  PydanticAudit.md  README.md  bootstrap_run.py  main.py  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  setup_dreamteam_structure.py  table_preview.html  unlock_module.py
.github/workflows/: ci.yml  release-draft.yml  release.yml
backup/: agents.yaml.bak  crew.py.bak
backup/old_config/config/: tasks.yaml.bak
docs/: CDC.md  DEVBOOK.md  PydanticAudit.md  inventory_management_spec.md  project_spec.md  recommendation_system_spec.md  spec_template.md
dreamteam/: README.md  pyproject.toml
src/dreamteam/: cli.py  cli.py.bak  connectors.py  core.py  core.py.bak  crew.py  crew.py.bak  crewai_prompts_patch.py  flow.py  main.py  memory.py  memory_policy.py  pdg_input.yaml  plugin_manager.py
src/dreamteam/config/: memory.yaml  tasks.yaml  tasks.yaml.bak
src/dreamteam/memory/: org_memory.db
src/dreamteam/plugins/: __init__.py  example_plugin.py  sentry_plugin.py  studio_plugin.py
src/dreamteam/subteams/marketing/config/: agents.yaml  tasks.yaml
src/dreamteam/tools/: memory_logger.py  rh_prompt_generator.py
src/squadmanager/: cli.py  cli.py.bak  client_input.yaml  connectors.py  core.py  crew.py  crewai_pydantic_v2_patch.py  flow.py  main.py  memory.py  memory_policy.py  pdg_input.yaml  plugin_manager.py  utils.py
src/squadmanager/config/: agents.yaml  agents.yaml.bak
src/squadmanager/dreamteam/: flow.py
src/squadmanager/dreamteam/memory/: config.yaml
src/squadmanager/dreamteam/plugins/: sentry_plugin.py  studio_plugin.py
src/squadmanager/plugins/: __init__.py  example_plugin.py  sentry_plugin.py  studio_plugin.py
src/squadmanager/tools/: custom_tool.py  memory_logger.py
tests/: conftest.py  test_agents_methods.py  test_ci_config.py  test_cli.py  test_cli_demo.py  test_cli_docs.py  test_cli_end_to_end.py  test_cli_integration.py  test_cli_memory.py  test_cli_memory_apply_policy.py  test_cli_plugin.py  test_cli_spec.py  test_cli_studio.py  test_cli_utils.py  test_config_alignment.py  test_core.py  test_core.py.bak  test_end_to_end_run.py  test_env.py  test_example_plugin.py  test_flow_memory.py  test_list_lockers.py  test_memory.py  test_memory_config.py  test_memory_env.py  test_memory_policy.py  test_memory_sqlite.py  test_plugin_manager.py  test_prerequisites.py  test_pydantic_migration.py  test_requirements_sync.py  test_sentry_plugin.py  test_studio_integration.py  test_studio_plugin.py
