[project]
name = "squadmanager"
version = "0.4.0"
description = "squadmanager manage all crewai team"
authors = [{ name = "Mipsou", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "sentry-sdk>=1.9.0,<2.0.0",
    "requests>=2.28.0,<3.0.0"
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

[project.scripts]
squadmanager = "squadmanager.cli:cli"
run_crew = "crewai.cli.run_crew:run_crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[project.optional-dependencies]
tools = ["crewai[tools]>=0.11.2,<0.12.0"]

[project.entry-points."squadmanager.plugins"]
# Plugins can register under this group
example = "squadmanager.plugins.example_plugin:ExamplePlugin"
sentry = "squadmanager.plugins.sentry_plugin:SentryPlugin"
studio = "squadmanager.plugins.studio_plugin:StudioPlugin"
