[project]
name = "dreamteam"
version = "0.1.0"
description = "dreamteam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
dreamteam = "dreamteam.main:run"
run_crew = "dreamteam.main:run"
train = "dreamteam.main:train"
replay = "dreamteam.main:replay"
test = "dreamteam.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
